--- a/INTRO-TO-HTML-5-AND-CSS/about.html
+++ b/INTRO-TO-HTML-5-AND-CSS/about.html
@@ -11,18 +11,17 @@
     <div id="container">
     <header> 
         <img src="Images/GrannySmith.webp" alt="GrannySmith" id="GRANNYSMITH">    
-        <nav>
+    <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        </div>
     </nav>
     </header>
+    </div>
 <hr>
 <main>
     <h1>Granny Smith</h1>
     <p>I believe that Granny Smith apples get their own description because they're my favorite kind of apple. Depending on the individuals prefrence, Granny Smiths could be your favorite kind of apple! Granny smiths aren't that much different from red or yellow apples, visually. What's more different other than the green hue, is the taste.
-        Granny Smith apples are usually described to be more on the sour side! Which is why they're the more popular apple between golden and red..it gives a fun taste that isn't so basic.
-    </p>
+        Granny Smith apples are usually described to be more on the sour side! Which is why they're the more popular apple between golden and red..it gives a fun taste that isn't so basic.</p>
 <h3>
 <a href="https://www.orangepippin.com/varieties/apples/granny-smith">Fun Granny Smith Facts</a>
 </h3>
