--- a/INTRO-TO-HTML-5-AND-CSS/about.html
+++ b/INTRO-TO-HTML-5-AND-CSS/about.html
@@ -38,7 +38,7 @@
         <li>Cox</li>
     </ul>
 </div>
-    In additon to that, Apple also make fun and cool art sketches and designs.</p>
+    <p>In additon to that, Apple also make fun and cool art sketches and designs.</p>
 
 <h4>Apple Art!</h4>
 <div class="row">
