--- a/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/Recipes.html
+++ b/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/Recipes.html
@@ -44,13 +44,11 @@ Out of my own boredom I've recently made an apple cake out of curiosity and foun
 
 </aside>
 </main>
-
 </div>
 
 <footer>
-    &copy; Jan Meredith 2025 APPLES Html5 and CSS Project Page <img src="IMAGES/screamingheart.gif" id="screamingheart">
+    &copy; Jan Meredith 2025 APPLES Html5 and CSS Project Page <img src="IMAGES/screamingheart.gif" alt="screamingheart" id="screamingheart">
     <p>Copyright &copy; 2025 by Jan Meredith</p>
-
-</div>
+</footer>
 </body>
 </html>
