--- a/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/About.html
+++ b/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/About.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div id="container">
 <body>
-
+    <div id="container">
     <header> 
         <img src="Images/GrannySmith.webp" alt="GrannySmith" id="GRANNYSMITH">    
-        <nav>
+    <nav>
         <a href="index.html">Home</a>
         <a href="About.html">About</a>
         <a href="Recipes.html">Recipes</a>
@@ -22,42 +21,34 @@
 <main>
     <h1>Granny Smith</h1>
     <p>I believe that Granny Smith apples get their own description because they're my favorite kind of apple. Depending on the individuals prefrence, Granny Smiths could be your favorite kind of apple! Granny smiths aren't that much different from red or yellow apples, visually. What's more different other than the green hue, is the taste.
-        Granny Smith apples are usually described to be more on the sour side! Which is why they're the more popular apple between golden and red..it gives a fun taste that isn't so basic.
-    </p>
-<h3>
-<a href="https://www.orangepippin.com/varieties/apples/granny-smith">Fun Granny Smith Facts</a>
-</h3>
-
+        Granny Smith apples are usually described to be more on the sour side! Which is why they're the more popular apple between golden and red..it gives a fun taste that isn't so basic.</p>
+<h3><a href="https://www.orangepippin.com/varieties/apples/granny-smith">Fun Granny Smith Facts</a></h3>
 <h2>What's so fun about apples?</h2>
 <p>Apples are seen as a generic and boring fruit and honestly, they deserve more recgonition. For one, they have the infamous saying, "An Apple a Day Keeps The Doctor Away!" and that alone is pretty iconic.
     Fruits like strawberries, raspberries, blueberries, and peaches are seen to be picked more than apples due to their taste. However, apples arent as boring as they seem! Apples contribute to the most amazing desserts such as a 
     classic apple pie, apple turnover, and many many more. Apples also arent just green, yellow, and red, there are much more apples than that! Just to name a few, there are 
-<div class="listy">
+    <div class="listy">
 <ul class="myyUL">
         <li>Fuji</li>
         <li>Jazz</li>
         <li>Pink Crisp</li>
         <li>Cox</li>
     </ul>
-</div>
-    In additon to that, Apple also make fun and cool art sketches and designs.
-</p>
-
+    <p>In additon to that, Apple also make fun and cool art sketches and designs.</p>
+<section id="meow">
 <h4>Apple Art!</h4>
-<div class="row">
-    <div class="column">
-        <a href="https://x.com/Ungapants/status/1482000399750287371?mx=2" id="meow">UngaPants</a>
+<a href="https://x.com/Ungapants/status/1482000399750287371?mx=2" id="meow">UngaPants</a>
         <img src="Images/CatUnger.jpg" alt="catunger" id="CATUNGER"> 
-</div>
-        <div class="column">  
+    </section>
+<aside id="doom">
             <a href="https://www.tumblr.com/jeeklaart" id="hyper">Jeeklaart</a>
   <img src="Images/Jeeklaart.jpg" alt="doomdude" id="JEEK">  
-</div>
-</div>
+</aside>
 <hr>
 <footer>
     &copy; Jan Meredith 2025 Apples HTML5 and CSS INTRO
 </footer>
 </main>
+</div>
 </body>
 </html>
