--- a/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/About.html
+++ b/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/About.html
@@ -26,7 +26,7 @@
 <h2>What's so fun about apples?</h2>
 <p>Apples are seen as a generic and boring fruit and honestly, they deserve more recgonition. For one, they have the infamous saying, "An Apple a Day Keeps The Doctor Away!" and that alone is pretty iconic.
     Fruits like strawberries, raspberries, blueberries, and peaches are seen to be picked more than apples due to their taste. However, apples arent as boring as they seem! Apples contribute to the most amazing desserts such as a 
-    classic apple pie, apple turnover, and many many more. Apples also arent just green, yellow, and red, there are much more apples than that! Just to name a few, there are 
+    classic apple pie, apple turnover, and many many more. Apples also arent just green, yellow, and red, there are much more apples than that! Just to name a few, there are</p>
     <div class="listy">
 <ul class="myyUL">
         <li>Fuji</li>
@@ -37,7 +37,7 @@
     <p>In additon to that, Apple also make fun and cool art sketches and designs.</p>
 <section id="meow">
 <h4>Apple Art!</h4>
-<a href="https://x.com/Ungapants/status/1482000399750287371?mx=2" id="meow">UngaPants</a>
+<a href="https://x.com/Ungapants/status/1482000399750287371?mx=2" id="unga">UngaPants</a>
         <img src="Images/CatUnger.jpg" alt="catunger" id="CATUNGER"> 
     </section>
 <aside id="doom">
