--- a/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/About.html
+++ b/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/About.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
     <header> 
-        <img src="Images/GrannySmith.webp" alt="GrannySmith" id="GRANNYSMITH">    
+        <img src="IMAGES/GrannySmith.webp" alt="GrannySmith" id="GRANNYSMITH">    
     <nav>
         <a href="index.html">Home</a>
         <a href="About.html">About</a>
@@ -37,11 +37,11 @@
 <section id="meow">
 <h4>Apple Art!</h4>
 <a href="https://x.com/Ungapants/status/1482000399750287371?mx=2" id="unga">UngaPants</a>
-        <img src="Images/CatUnger.jpg" alt="catunger" id="CATUNGER"> 
+        <img src="IMAGES/CatUnger.jpg" alt="catunger" id="CATUNGER"> 
     </section>
 <aside id="doom">
             <a href="https://www.tumblr.com/jeeklaart" id="hyper">Jeeklaart</a>
-  <img src="Images/Jeeklaart.jpg" alt="doomdude" id="JEEK">  
+  <img src="IMAGES/Jeeklaart.jpg" alt="doomdude" id="JEEK">  
 </aside>
 <hr>
 <footer>
