--- a/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/Recipes.html
+++ b/INTRO-TO-HTML-5-AND-CSS/DEMO/ADVANCED CSS/Recipes.html
@@ -25,7 +25,7 @@
 <p>To start us off, everyone knows the iconic apple pie. Apple pies are considered to originate in England during the 14th century, the creator is unkown. Regardless of apple pie being an all-around American classic, the culinary was brought over from European/English colonists. The time apple pie was considered an American household treat is around the 18th and 19th century and really became a big hit during the 20th century,
     The design and visual appeal of the apple pie was heavily inspired by french cuisine, the netherlands and even the ottoman empire. Originally, Apple pie was made with apples, fighs, pears, and raisins but suprisingly, there was no inclusion of sugar.
 Now, apple pies are known to include brown sugar, any sorts of apples, and a variety of different ingredients. With it's charming flavor palette and inexpensive ingredients, apple pies became a popular dessert all around.  </p>
-<img src="Images/applepie.jpeg" alt="appliepie" id="applepie">
+<img src="IMAGES/applepie.jpeg" alt="appliepie" id="applepie">
 <main>
 <section id="desserts">
     <h2>French Apple Cake</h2>
