--- a/IntroToHtmlJan/FinalProj/Mariposa.html
+++ b/IntroToHtmlJan/FinalProj/Mariposa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="styleeZ.css">
+    <link rel="stylesheet" href="styleez.css">
     <link rel="icon" type="image/x-icon" href="Images/icon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
