--- a/IntroToHtmlJan/FinalProj/index.html
+++ b/IntroToHtmlJan/FinalProj/index.html
@@ -16,6 +16,7 @@
     <audio controls autoplay loop>
         <source src="Images/LandDELRAY.mp3" type="audio/ogg">
       </audio>
+    <body>
     <header>
     <h1>The Essence of a Flower</h1>
     </header>
